# Connect-Four-tiralabra

./: README.md  pyproject.toml  tasks.py
documentation/: implementation.md  projectspecification.md  requirementsspecification.md  testing.md  userguide.md  weeklyreport1.md  weeklyreport2  weeklyreport2.md  weeklyreport3.md  weeklyreport4.md  weeklyreport5.md  weeklyreport6.md  weeklyreport7.md
dokumentaatio/: tyoaikakirjanpito.md  vaatimusmaarittely.md  viikkoraportti1.md  weeklyreport1.md
src/: commands.py  gameloop.py  gamerack.py  gamestatus.py  mainloop.py  maximizer.py  minimax.py  minimizer.py  score.py
src/tests/: gameloop_test.py  gamerack_test.py  gamestatus_test.py  mainloop_test.py  minimax_test.py  score_test.py
