[tool.poetry]
name = "connect-four-tiralabra"
version = "0.1.0"
description = ""
authors = ["lottapispa <lotta.pispa@helsinki.fi>"]
readme = "README.md"
packages = [{include = "connect_four_tiralabra"}]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^5.0"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"
pylint = "^2.17.5"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
